tests/compile_fail/two_missing_files.rs
fn main() {
    let _: &str = read_doc::module!("nonesuch.rs", "nada.rs");
}
