tests/compile_fail/two_missing_files.stderr
error: Failed to read "$DIR/tests/compile_fail/nonesuch.rs": No such file or directory (os error 2)
 --> tests/compile_fail/two_missing_files.rs:2:37
  |
2 |     let _: &str = read_doc::module!("nonesuch.rs", "nada.rs");
  |                                     ^^^^^^^^^^^^^
